--- a/app/src/main/res/layout/activity_admin_catalog.xml
+++ b/app/src/main/res/layout/activity_admin_catalog.xml
@@ -85,94 +85,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Custom Card Pertama -->
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/background_admin_card"
-                android:clipToOutline="true"
-                android:layout_marginHorizontal="10dp"
-                android:outlineProvider="background"
-                android:scaleType="centerCrop"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:padding="10dp">
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_barang" />
 
-                <ImageView
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/imagessb"
-                    android:scaleType="centerCrop"
-                    android:background="@drawable/round_image"
-                    android:clipToOutline="true"
-                    android:outlineProvider="background"/>
 
-                <LinearLayout
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingLeft="10dp">
+            <!-- Custom Card Pertama -->
 
-                    <TextView
-                        android:fontFamily="@font/poppins_semibold"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="Sleeping Bag"
-                        android:textColor="#fff"
-                        android:textSize="13dp"/>
 
-                    <TextView
-                        android:fontFamily="@font/poppins_regular"
-                        android:layout_width="120dp"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-                        android:textColor="#fff"
-                        android:textSize="10dp"
-                        android:paddingBottom="1dp"/>
-
-                    <TextView
-                        android:fontFamily="@font/poppins_medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:text="RP. 22.000,- / day"
-                        android:textColor="#fff"
-                        android:paddingTop="1dp"
-                        android:textSize="11dp"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <ImageButton
-                        android:id="@+id/fab2"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/icon_update"
-                        android:background="@drawable/round_update"
-                        android:layout_marginBottom="20dp" />
-
-                    <Space
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1" />
-
-                    <ImageButton
-                        android:id="@+id/deleteButton"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/icon_delete"
-                        android:background="@drawable/round_update"
-                        android:layout_marginTop="2dp"/>
-
-                </LinearLayout>
-            </LinearLayout>
 
 
         </LinearLayout>
