--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity"
     android:background="#fff"
     android:orientation="vertical"
-    android:paddingBottom="30dp">
+    android:padding="0dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -15,12 +15,13 @@
         android:layout_height="349dp"
         android:src="@drawable/intersect"
         tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="3dp" />
+        tools:layout_editor_absoluteY="3dp"
+        android:layout_marginBottom="10dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="40dp"
+        android:textSize="50dp"
         android:fontFamily="@font/poppins_medium"
         android:textStyle="bold"
         android:text="Wellcome"/>
@@ -32,7 +33,8 @@
         android:textSize="30dp"
         android:fontFamily="@font/poppins_regular"
         android:textStyle="bold"
-        android:text="Summit Stock"/>
+        android:text="Summit Stock"
+        android:layout_marginBottom="20dp"/>
 
 
 
@@ -43,9 +45,10 @@
         android:id="@+id/buttonLogin"
         android:fontFamily="@font/poppins_regular"
         android:text="LOGIN as Admin"
-        android:backgroundTint="#2E4F4F"
+        android:background="@drawable/custom_background_button"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
+        android:layout_marginBottom="10dp"
         />
 
     <Button
@@ -55,10 +58,13 @@
         android:id="@+id/buttonUser"
         android:fontFamily="@font/poppins_regular"
         android:text="LOGIN as User"
-        android:backgroundTint="#2E4F4F"
         android:layout_marginRight="10sp"
         android:layout_marginLeft="10sp"
+        android:background="@drawable/custom_background_button"
+        android:layout_marginTop="10dp"
+
         />
+
 
 
 </LinearLayout>
