--- a/app/src/main/res/layout/fragment_bottom_sheet_update.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_update.xml
@@ -15,7 +15,7 @@
 
     <!-- Button to Trigger Image Selection -->
     <Button
-        android:id="@+id/uploadBtnAdd"
+        android:id="@+id/uploadBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Select Image"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:hint="Nama Barang"
         android:inputType="textPersonName"
-        android:layout_below="@+id/uploadBtnAdd"
+        android:layout_below="@+id/uploadBtn"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
 
